force-app/main/default/objects/Advance_Payment__c/fields/Auto_Utilize__c.field-meta.xml
<CustomField>
    <fullName>Auto_Utilize__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Utilize</label>
    <type>Checkbox</type>
</CustomField>