force-app/main/default/objects/Advance_Payment__c/fields/Source_Demand__c.field-meta.xml
<CustomField>
    <fullName>Source_Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Demand</label>
    <referenceTo>Demands__c</referenceTo>
    <relationshipLabel>Advance Payments</relationshipLabel>
    <relationshipName>Advance_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>