force-app/main/default/objects/Advance_Payment__c/fields/Source_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Source_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Advance Payments</relationshipLabel>
    <relationshipName>Advance_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>